2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool support more robust, link against roboptim-core.
	* .gitignore: Remove committed file from ignore list.
	* Makefile.am: Add libtool related rules.
	* build-aux/bootstrap: Remove force flag from autoreconf call.
	* build-aux/config.guess: New.
	* build-aux/config.sub: New.
	* build-aux/depcomp: New.
	* build-aux/install-sh: New.
	* build-aux/libtool.m4: New.
	* build-aux/ltmain.sh: New.
	* build-aux/ltoptions.m4: New.
	* build-aux/ltsugar.m4: New.
	* build-aux/ltversion.m4: New.
	* build-aux/lt~obsolete.m4: New.
	* build-aux/missing: New.
	* configure.ac: Remove unneeded macro.
	* src/Makefile.am: Link against roboptim-core.

2009-05-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute pkg.m4.
	* build-aux/pkg.m4: New.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Make the plugin safer and clean the error management code.
	* src/roboptim-core-cfsqp-plugin.cc:
	Fix unitialized memory use, add more assertions, copy lambdas
	into result class and clean error/warning management code.
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc:
	Use new function interface.
	* tests/optimization-problem-1.stdout: Regenerate.
	* tests/plugin.cc: Display problem before solving it.
	* tests/plugin.stdout: Regenerate.
	* tests/simple.cc: Remove unwanted return statement.
	* tests/simple.stdout: Regenerate.

2009-05-20  Thomas Moulard  <thomas.moulard@gmail.com>

	Add new test.
	* tests/Makefile.am: Compile new test.
	* tests/optimization-problem-1.cc: New.
	* tests/optimization-problem-1.stdout: New.
	* tests/testsuite.at: Run new test.

2009-05-05  Thomas Moulard  <thomas.moulard@gmail.com>

	Predeclare functions to remove some warnings.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix makeBound call.
	* tests/hs071.hh: Here.
